--- a/frontend/package.json
+++ b/frontend/package.json
@@ -139,7 +139,8 @@
       "^app/(.*)$": "<rootDir>/app/$1",
       "\\.(css|less)$": "identity-obj-proxy",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
-    }
+    },
+    "reporters":["default","jest-junit"]
   },
   "homepage": "http://mywebsite.com/relativepath"
 }
