--- a/backend/package.json
+++ b/backend/package.json
@@ -73,7 +73,8 @@
     "@types/joi": "^14.3.4",
     "@types/node": "^11.15.9",
     "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
+    "jest": "^26.4.0",
+    "jest-junit": "^11.1.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.2",
@@ -113,7 +114,10 @@
     ],
     "testEnvironment": "node",
     "verbose": false,
-    "reporters":["default","jest-junit"]
+    "reporters": [
+      "default",
+      "jest-junit"
+    ]
   },
   "jest-junit": {
     "outputDirectory": "test-results/junit",
