--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,15 @@ version: 2.1
 jobs:
   backend_build:
     docker:
-      - image: circleci/node
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys:
             # when lock file changes, use increasingly general patterns to restore cache
-            - backend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
-            - backend-dep-v1-{{ .Branch }}-
-            - backend-dep-v1-
+            - backend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - backend-dep-v2-{{ .Branch }}-
+            - backend-dep-v2-
   
       - run:
           name: Build backend
@@ -23,27 +23,26 @@ jobs:
       - save_cache:
           paths:
             - backend/node_modules  # location depends on npm version
-          key: backend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: backend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
 
 
   backend_tests:
     docker:
-      - image: circleci/node
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys:
             # when lock file changes, use increasingly general patterns to restore cache
-            - backend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
-            - backend-dep-v1-{{ .Branch }}-
-            - backend-dep-v1-
+            - backend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - backend-dep-v2-{{ .Branch }}-
+            - backend-dep-v2-
      
       - run:
           name: Run tests with JUnit as reporter
           command: |
             cd backend
             npm i
-            mkdir -p test-results/junit
             yarn add --dev jest-junit
             yarn test --ci --runInBand --reporters=default --reporters=jest-junit
      
@@ -56,19 +55,19 @@ jobs:
       - save_cache:
           paths:
             - backend/node_modules  # location depends on npm version
-          key: backend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: backend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
 
   frontend_build:
     docker:
-      - image: circleci/node
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys:
             # when lock file changes, use increasingly general patterns to restore cache
-            - frontend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
-            - frontend-dep-v1-{{ .Branch }}-
-            - frontend-dep-v1-
+            - frontend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - frontend-dep-v2-{{ .Branch }}-
+            - frontend-dep-v2-
 
       - run:
           name: Build frontend
@@ -80,28 +79,27 @@ jobs:
       - save_cache:
           paths:
             - frontend/node_modules  # location depends on npm version
-          key: frontend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: frontend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
   
 
 
   frontend_tests:
     docker:
-      - image: circleci/node
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
           keys:
             # when lock file changes, use increasingly general patterns to restore cache
-            - frontend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
-            - frontend-dep-v1-{{ .Branch }}-
-            - frontend-dep-v1-
+            - frontend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - frontend-dep-v2-{{ .Branch }}-
+            - frontend-dep-v2-
 
       - run:
           name: Run tests with JUnit as reporter
           command: |
             cd frontend
             npm i
-            mkdir -p test-results/junit
             yarn add --dev jest-junit
             yarn test --ci --runInBand --reporters=default --reporters=jest-junit
         
@@ -113,7 +111,7 @@ jobs:
       - save_cache:
           paths:
             - frontend/node_modules  # location depends on npm version
-          key: frontend-dep-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: frontend-dep-v2-{{ .Branch }}-{{ checksum "package-lock.json" }}
         
 
 workflows:
