--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,13 @@ orbs:
   slack: circleci/slack@3.4.2
 
 commands:
-  slack-notify:
-    when: on_fail   
+  slack-notify:  
     steps:
       - slack/notify:
           color: "#42e2f4"
           mentions: "ozayr,"
           message: just a message
-
+          fail_only: true
 
 jobs:
 # =========================================================================================================
