--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,14 @@ version: 2.1
 orbs:
   slack: circleci/slack@3.4.2
 
-commands:
-  slack-notify:  
-    steps:
-      - slack/notify:
-          color: "#42e2f4"
-          mentions: "ozayr,"
-          message: just a message
-          fail_only: true
+# commands:
+#   slack-notify:  
+#     steps:
+#       - slack/notify:
+#           color: "#42e2f4"
+#           mentions: "ozayr,"
+#           message: just a message
+#           fail_only: true
 
 jobs:
 # =========================================================================================================
@@ -104,8 +104,6 @@ jobs:
             npm add --dev jest-junit
             npm run test --reporters=jest-junit
       
-      - slack-notify
-
       - store_test_results:
           path: frontend/test-results
       - store_artifacts:
@@ -115,6 +113,13 @@ jobs:
           paths:
             - frontend/node_modules  
           key: front-end
+          
+      - slack/notify:
+          channel: cicd-pipeline
+          color: "#42e2f4"
+          mentions: "ozayr,"
+          message: just a message
+          fail_only: true
 # =========================================================================================================
 # ANALYZE
   audit-backend:
