--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -28,10 +28,16 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udacity
+      KeyName: testAwsCli
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
-      ImageId: ami-068663a3c619dd892 
+      ImageId: ami-0a634ae95e11c6f91
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+
+  
+  Outputs:
+    BackendURL:
+      Value: !GetAtt EC2Instance.DNSName
+      Description: public DNS of EC2 instance
