--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -37,7 +37,7 @@ Resources:
           Value: !Sub backend-${ID}
 
   
-  Outputs:
-    BackendURL:
-      Value: !GetAtt EC2Instance.DNSName
-      Description: public DNS of EC2 instance
+  # Outputs:
+  #   BackendURL:
+  #     Value: !GetAtt EC2Instance.DNSName
+  #     Description: public DNS of EC2 instance
