--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,13 +244,16 @@ jobs:
       - run: apk add tar gzip
       - attach_workspace:
           at: ./
+      - run: mkdir -p .circleci/ansible/roles/configure-server/files
       - run:
           name: Install dependencies and run build to generate dist folder to copy into remote server 
           command: | 
             apk add --update ansible nodejs npm 
             cd backend 
             npm i  
-            npm run build 
+            npm run build
+            cp -ar dist  ../.circleci/ansible/roles/configure-server/files
+
       - run: 
           name: Configure server using ansible playbook
           command: ansible-playbook -i inventory .circleci/ansible/configure_backend.yml
