--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,7 +244,7 @@ jobs:
       - run: apk add tar gzip
       - attach_workspace:
           at: ./
-      - run: mkdir -p  .circleci/ansible/roles/configure-server/files/dist
+      # - run: mkdir -p  .circleci/ansible/roles/configure-server/files/dist
       - run:
           name: Install dependencies and run build to generate dist folder to copy into remote server 
           command: | 
@@ -252,7 +252,7 @@ jobs:
             cd backend 
             npm i  
             npm run build
-            cp -rv dist/  ../.circleci/ansible/roles/configure-server/files/dist/
+            cp -rv dist/  ../.circleci/ansible/roles/configure-server/files/
 
       - run: 
           name: Configure server using ansible playbook
