--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,7 +248,7 @@ jobs:
       - run:
           name: Install dependencies and run build to generate dist folder to copy into remote server 
           command: | 
-            apk add --update ansible nodejs npm 
+            pip install awscli && apk add --update ansible nodejs npm 
             cd backend 
             npm i  
             npm run build
@@ -260,7 +260,9 @@ jobs:
           environment:
             ANSIBLE_HOST_KEY_CHECKING: False
       - slack-notify
- 
+      - destroy_environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
   run-migrations:
     docker:
       - image: python:3.7-alpine3.11
