--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -34,7 +34,7 @@
     state: directory
 
 - name: copy ditribution folder to remote server
-  copy:
+  syncronize:
     src: "files/dist/"
     dest: "~/web"
     
